<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Öğrenmeye başlamak için seviye seçiniz."
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/seviye_sec"
            android:baselineAligned="false"
            android:fontFamily="@font/poppins_bold"
            android:onClick="baslangic"
            android:text="@string/ba_langi"
            android:textColor="@drawable/seviye_buton_yazi_sec" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/seviye_sec"
            android:fontFamily="@font/poppins_bold"
            android:onClick="orta"
            android:text="@string/orta_sev_ye"
            android:textColor="@drawable/seviye_buton_yazi_sec" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/seviye_sec"
            android:fontFamily="@font/poppins_bold"
            android:onClick="ileri"
            android:text="@string/ler_sev_ye"
            android:textColor="@drawable/seviye_buton_yazi_sec" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_light"
        android:text="Ücretsiz İngilizce kelime ezberleme yardımcınız."
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>